2005-07-07 Mariusz Woloszyn
	* ptp.c, ptpcam.c, ptpcam.h: better capture, better error handling,
	  code polishing
2005-07.02 Mariusz Woloszyn
	* src/ptpcam.c: added --loop-capture
	* configure.in: changed version number, improved libusb checking
2005-07-02 Mariusz Woloszyn
	* src/ptpcam.c, src/ptp.c: fixed a bug that caused files over 2MB to
	  be corrupted while downloading. 
2005-07-02 libptp2-1.0.3 started
2005-05-06 Mariusz Woloszyn
	* ptpcam.c: added NIKON capture workaround
2005-04-21 Mariusz Woloszyn
	* src/ptpcam.c,src/ptpcam.h: added --capture, --delete-object and
	  --delete-all-files support
2005-03-01 Mariusz Woloszyn
	* ptp.c, ptp.h, ptp-pack.c, ptpcam.c: moved to src
	* src/ptpcam.c: moved some defines and definitions to ptpcam.h,
	  added "get all files" operations, added --overwrite mode,
	  fixed stall problem for kernels 2.6.x (affecting CANON cameras),
	  some code cleanup and reorganization, changed comments to /**/
	* src/ptp.c, src/ptp.h: fixed properties typos and added new
	  properties
	* src/ptpcam.h: added
	* configure.in, Makefile.am, src/Makefile.am: improved and adapted
	  build system
2005-02-14 Mariusz Woloszyn
	* ptpcam.c: fix for canon STALL problem; big thanks come to
		DervishD (bugs[A@T]dervishd.net) for helping to identify the
		problem and performing lot of tests.
2005-01-20 Mariusz Woloszyn
	* ptpcam.c: fixed mmap() return value comparision, thx to Pallab Basu
2005-01-10 Mariusz Woloszyn
	* ptp.h, ptp.c: added Nikon properties reported by Steve Harris
2004-07-28 Mariusz Woloszyn
	* README: minor changes, updated the copyright notice;
	* configure.in: changed the version to 1.0.1 and updated the library
			version;
	* ptp.c: - LICENSE CHANGED TO GPL, 
		 - changed behavior of ptp_usb_getdata(), if *data is not
		   NULL no memory allocation is performed,
		 - ptp_perror(), ptp_get_operation_name,
		   ptp_get_property_name added/updated to return proprietary
		   extension data;
	* ptp.h: - LICENSE CHANGED TO GPL,